# `MkRefs` changelog

## 0.3.0

2021-07-??

  * migrated to `mkdocs-material` as part of development
  * fixed bug in RDF for function parameters


## 0.2.0

2021-06-27

  * added glossary support
  * added apidocs support


## 0.1.0

2021-05-22

  * initial release, bibliography only